# fanda

./: .gitignore  README.md  main.py  pyproject.toml  run_data.csv
examples/: algorithm_comparison.py  multi_subplot.py  noisy_training.py  plot_bsuite.py  plot_popgym.py  sin_cos.py  sin_cosine.py
fanda/: __init__.py  fanda.py  plot_utils.py  plotting.py  transforms.py  utils.py  visualizations.py  wandb_client.py
fanda/styles/: iclr.mplstyle  icml.mplstyle  neurips.mplstyle  poster.mplstyle  slides.mplstyle
wandp/: wandb_client.py
