[tool.setuptools]
packages = ["fanda"]

[project]
name = "fanda"
version = "0.1.0"
description = "Figures and Axes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "rich>=14.2.0",
    "scienceplots>=2.2.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "wandb>=0.23.0",
]
