[tool.setuptools]
packages = ["fanda"]

[project]
name = "fanda"
version = "0.2.1"
description = "Figures and Axes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.2",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "pyqt6>=6.10.0",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/noahfarr/fanda"
